# Propfan-Experimental

./: .gitignore  LICENSE  README.md  pyproject.toml
cad/: README.md
cfd/: README.md
config/: README.md
data/: README.md
docs/: ASSUMPTIONS.md  MISSION_REQUIREMENTS.md  PROJECT_PLAN.md
notebooks/: README.md
results/: README.md
src/propfan/: README.md  __init__.py
tests/: README.md
